#
# $Id$
#

AUTOMAKE_OPTIONS = foreign
SUBDIRS = src man test examples

EXTRA_DIST = $(top_srcdir)/gdwin32/COPYING.TXT \
             $(top_srcdir)/gdwin32/index.html \
             $(top_srcdir)/gdwin32/NEWS \
             $(top_srcdir)/gdwin32/bin/*.dll \
             $(top_srcdir)/gdwin32/bin/*.exe \
             $(top_srcdir)/gdwin32/lib/*.lib \
             $(top_srcdir)/gdwin32/include/*.h
