#
# $Id$
#

TESTS_ENVIRONMENT= top_builddir=$(top_builddir)
TESTS = renderercheck.sh

EXTRA_DIST = renderercheck.sh \
testinput0.msc   testinput11.msc  testinput4.msc  testinput7.msc \
testinput1.msc   testinput2.msc   testinput5.msc  testinput8.msc \
testinput10.msc  testinput3.msc   testinput6.msc  testinput9.msc

CLEANFILES = *.png *.svg *.eps

# END OF FILE